syntax = "proto3";

import "common.proto";

message Site {
    string id = 1;
    string name = 2;
    string banner = 3;
    string logo = 4;
    string url = 5;
    Date established = 6;
    string description = 7;
    string studio_id = 8;
    string network_id = 9;
    DateTime added_on = 350;
};
